--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-MYSQL_DB_USERNAME=root
-MYSQL_DB_PASSWORD=ebryx123
-MYSQL_DB_DATABASE=premit
-MYSQL_DB_HOSTNAME=127.0.0.1
-DISCORD_OAUTH_CLIENT_ID=970534833753292871
-DISCORD_OAUTH_SECRET=f17TNjs-Fs9SedsP-6bxAWpRaBCWDi5Q
-DISCORD_REDIRECT_URL=http://localhost:3001/api/auth/discord/redirect
-ENCRYPT_SECRET=ahmad1234
+VUE_APP_MYSQL_DB_USERNAME=root
+VUE_APP_MYSQL_DB_PASSWORD=ebryx123
+VUE_APP_MYSQL_DB_DATABASE=premit
+VUE_APP_MYSQL_DB_HOSTNAME=127.0.0.1
+VUE_APP_DISCORD_OAUTH_CLIENT_ID=970534833753292871
+VUE_APP_DISCORD_OAUTH_SECRET=f17TNjs-Fs9SedsP-6bxAWpRaBCWDi5Q
+VUE_APP_DISCORD_REDIRECT_URL=http://localhost:8080/redirect
+VUE_APP_ENCRYPT_SECRET=ahmad1234
