--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VUE_APP_MYSQL_DB_DATABASE=premit
 VUE_APP_MYSQL_DB_HOSTNAME=127.0.0.1
 VUE_APP_DISCORD_OAUTH_CLIENT_ID=970534833753292871
 VUE_APP_DISCORD_OAUTH_SECRET=f17TNjs-Fs9SedsP-6bxAWpRaBCWDi5Q
-VUE_APP_DISCORD_REDIRECT_URL=http://localhost:8080/redirect
+VUE_APP_DISCORD_REDIRECT_URL=https://main--effulgent-souffle-d42e2d.netlify.app/redirect
 VUE_APP_ENCRYPT_SECRET=ahmad1234
 VUE_APP_TWITTER_OAUTH_CLIENT_ID=bXhNTGkxVnIwYTRlSnFiS3plYTA6MTpjaQ
 VUE_APP_TWITTER_REDIRECT_URL=https://main--effulgent-souffle-d42e2d.netlify.app/redirect
